@startuml

title __CONTROLLERS's Class Diagram__\n

  namespace es.ull {
    namespace controllers {
      class es.ull.controllers.Controller {
          - cuadroGRafico : JInternalFrame
          + Controller()
          + run()
      }
    }
  }
  

  namespace es.ull {
    namespace controllers {
      class es.ull.controllers.CovidController {
          - cuadroGRafico : JInternalFrame
          + CovidController()
          + run()
      }
    }
  }
  

  namespace es.ull {
    namespace controllers {
      class es.ull.controllers.WeatherController {
          - cuadroGRafico : JInternalFrame
          + WeatherController()
          + run()
      }
    }
  }
  

  es.ull.controllers.Controller .up.|> java.lang.Runnable
  es.ull.controllers.Controller o-- es.ull.charts.GraphicContext : gc
  es.ull.controllers.Controller o-- es.ull.models.Model : twitterModel
  es.ull.controllers.CovidController .up.|> java.lang.Runnable
  es.ull.controllers.CovidController o-- es.ull.models.CovidModel : covidModel
  es.ull.controllers.CovidController o-- es.ull.charts.GraphicContext : gc
  es.ull.controllers.WeatherController .up.|> java.lang.Runnable
  es.ull.controllers.WeatherController o-- es.ull.charts.GraphicContext : gc
  es.ull.controllers.WeatherController o-- es.ull.models.WeatherModel : weatherModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
